--- a/rdm-science-cafe/slides.html
+++ b/rdm-science-cafe/slides.html
@@ -81,7 +81,8 @@ menetelmät</h1>
 <li>Muinainen (ensimmäinen vuosituhat eKr.) lähi-itä (Mesopotamia,
 “kaksoisvirran maa”)</li>
 <li>Digihumanismi, arkeologia, yhteiskuntatieteelliset teoriat</li>
-<li>Tero Alstola, Saana Svärd, Aleksi Sahala, Eleanor Bennett ym.</li>
+<li>Tero Alstola, Saana Svärd, Krister Lindén, Aleksi Sahala, Eleanor
+Bennett ym.</li>
 </ul></li>
 </ul>
 </section>
@@ -306,9 +307,10 @@ A esiintyminen sanan B ympäristössä kuin yleensä?</li>
 <ul>
 <li><p>Sanaupotuksia käytetään yleensä sovelluksissa, ei suoraan
 tulkintaan</p></li>
-<li><p>Sanoupotukset muodostavat yleensä n. 100-ulotteisen
+<li><p>Sanaupotukset muodostavat yleensä n. 100-ulotteisen
 avaruuden</p></li>
-<li><p>PMI-parit muodostavat verkoston, jossa on N^N kaarta</p></li>
+<li><p>PMI-parit muodostavat verkoston, jossa on N^N kaarta, eivätkä ne
+ole avaruudellisessa suhteessa keskenään</p></li>
 </ul>
 </section>
 <section id="demo-ulotteisuus" class="slide level1">
@@ -339,6 +341,10 @@ semantiikkaa</p></li>
 </section>
 <section id="demo-anee-portaalit" class="slide level1">
 <h1>Demo: ANEE-portaalit</h1>
+<ul>
+<li><a href="https://www.helsinki.fi/en/researchgroups/ancient-near-eastern-empires/anee-lexical-networks-v20">Leksikaaliset
+portaalit ANEE:n sivuilla</a></li>
+</ul>
 </section>
 <section id="sovellukset" class="slide level1">
 <h1>Sovellukset</h1>
